Test Case checkout

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Timo\AppData\Local\Temp\testng-eclipse-1686511402\testng-customsuite.xml</span>
+                    <span>C:\Users\Timo\AppData\Local\Temp\testng-eclipse--921872559\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.UserRegisterWith_DTT_CSVTestCase" hash-for-method="UserCanReguisterSuccessfully">UserCanReguisterSuccessfully</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.CheckOutTestCase" hash-for-method="AddProductToCart">AddProductToCart</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.CheckOutTestCase" hash-for-method="UserCanGoToCheckoutSuccessfully">UserCanGoToCheckoutSuccessfully</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.CheckOutTestCase" hash-for-method="UserCanReguisterSuccessfully">UserCanReguisterSuccessfully</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.CheckOutTestCase" hash-for-method="UserCanSearchForProductSuccessfully">UserCanSearchForProductSuccessfully</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,9 +135,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.UserRegisterWith_DTT_CSVTestCase</span>
+              <span class="class-name">tests.CheckOutTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="AddProductToCart">
+                  </a> <!-- AddProductToCart -->
+                  <span class="method-name">AddProductToCart</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="UserCanGoToCheckoutSuccessfully">
+                  </a> <!-- UserCanGoToCheckoutSuccessfully -->
+                  <span class="method-name">UserCanGoToCheckoutSuccessfully</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="UserCanReguisterSuccessfully">
@@ -130,12 +159,19 @@
                   <span class="method-name">UserCanReguisterSuccessfully</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="UserCanSearchForProductSuccessfully">
+                  </a> <!-- UserCanSearchForProductSuccessfully -->
+                  <span class="method-name">UserCanSearchForProductSuccessfully</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Timo\AppData\Local\Temp\testng-eclipse-1686511402\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Timo\AppData\Local\Temp\testng-eclipse--921872559\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +180,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.UserRegisterWith_DTT_CSVTestCase&quot;/&gt;
+      &lt;class name=&quot;tests.CheckOutTestCase&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +220,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'UserCanReguisterSuccessfully')
-data.setCell(0, 2, 'tests.UserRegisterWith_DTT_CSVTestCase')
-data.setCell(0, 3, 15271);
+data.setCell(0, 1, 'AddProductToCart')
+data.setCell(0, 2, 'tests.CheckOutTestCase')
+data.setCell(0, 3, 8554);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'UserCanReguisterSuccessfully')
+data.setCell(1, 2, 'tests.CheckOutTestCase')
+data.setCell(1, 3, 8128);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'UserCanSearchForProductSuccessfully')
+data.setCell(2, 2, 'tests.CheckOutTestCase')
+data.setCell(2, 3, 6166);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'UserCanGoToCheckoutSuccessfully')
+data.setCell(3, 2, 'tests.CheckOutTestCase')
+data.setCell(3, 3, 3885);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 15 seconds</span>
+              <span class="suite-total-time">Total running time: 26 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,26 +267,50 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.UserRegisterWith_DTT_CSVTestCase</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.CheckOutTestCase</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">Startdriver(firefox)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">UserCanReguisterSuccessfully</span>
-                <span class="method-start">14586 ms</span>
+                <span class="method-start">16315 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">failtestcase([TestResult name=UserCanReguisterSuccessfully status=SUCCESS method=UserRegisterWith_DTT_CSVTestCase...)</span>
-                <span class="method-start">29861 ms</span>
+                <span class="method-name">failtestcase([TestResult name=UserCanReguisterSuccessfully status=SUCCESS method=CheckOutTestCase.UserCanReguiste...)</span>
+                <span class="method-start">24448 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">UserCanSearchForProductSuccessfully</span>
+                <span class="method-start">24451 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">failtestcase([TestResult name=UserCanSearchForProductSuccessfully status=SUCCESS method=CheckOutTestCase.UserCanS...)</span>
+                <span class="method-start">30619 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">AddProductToCart</span>
+                <span class="method-start">30620 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">failtestcase([TestResult name=AddProductToCart status=SUCCESS method=CheckOutTestCase.AddProductToCart()[pri:3, i...)</span>
+                <span class="method-start">39176 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">UserCanGoToCheckoutSuccessfully</span>
+                <span class="method-start">39177 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">failtestcase([TestResult name=UserCanGoToCheckoutSuccessfully status=SUCCESS method=CheckOutTestCase.UserCanGoToC...)</span>
+                <span class="method-start">43067 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">WaitAfterClass</span>
-                <span class="method-start">29864 ms</span>
+                <span class="method-start">43068 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">StopDriver</span>
-                <span class="method-start">32948 ms</span>
+                <span class="method-start">48087 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
