--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">18,306</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">29,777</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tests.UserRegisterWith_DTT_CSVTestCase</td><td><a href="#m0">UserCanReguisterSuccessfully</a></td><td rowspan="1">1572773936503</td><td rowspan="1">15271</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">tests.CheckOutTestCase</td><td><a href="#m0">AddProductToCart</a></td><td rowspan="1">1572878375968</td><td rowspan="1">8554</td></tr><tr class="passedeven"><td><a href="#m1">UserCanGoToCheckoutSuccessfully</a></td><td rowspan="1">1572878384525</td><td rowspan="1">3885</td></tr><tr class="passedeven"><td><a href="#m2">UserCanReguisterSuccessfully</a></td><td rowspan="1">1572878361663</td><td rowspan="1">8128</td></tr><tr class="passedeven"><td><a href="#m3">UserCanSearchForProductSuccessfully</a></td><td rowspan="1">1572878369799</td><td rowspan="1">6166</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">tests.UserRegisterWith_DTT_CSVTestCase#UserCanReguisterSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.CheckOutTestCase#AddProductToCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.CheckOutTestCase#UserCanGoToCheckoutSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">tests.CheckOutTestCase#UserCanReguisterSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">tests.CheckOutTestCase#UserCanSearchForProductSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
