--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,11 +4,23 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.UserRegisterWith_DTT_CSVTestCase</td>
+<td>tests.CheckOutTestCase</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>UserCanGoToCheckoutSuccessfully</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>UserCanSearchForProductSuccessfully</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>AddProductToCart</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>UserCanReguisterSuccessfully</td>
