--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f4a68b">  <td>19/11/03 10:38:41</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserRegisterWith_DTT_CSVTestCase@343f4d3d]">&gt;&gt;Startdriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="f4a68b">  <td>19/11/03 10:39:14</td>   <td>32932</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserRegisterWith_DTT_CSVTestCase@343f4d3d]">&lt;&lt;StopDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>19/11/03 10:38:56</td>   <td>14569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegisterWith_DTT_CSVTestCase.UserCanReguisterSuccessfully()[pri:0, instance:tests.UserRegisterWith_DTT_CSVTestCase@343f4d3d]">UserCanReguisterSuccessfully</td> 
-  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="f4a68b">  <td>19/11/03 10:39:11</td>   <td>29847</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserRegisterWith_DTT_CSVTestCase@343f4d3d]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="f4a68b">  <td>19/11/03 10:39:11</td>   <td>29846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserRegisterWith_DTT_CSVTestCase@343f4d3d]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
+<tr bgcolor="756ead">  <td>19/11/04 15:39:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckOutTestCase.AddProductToCart()[pri:3, instance:tests.CheckOutTestCase@46df794e]">AddProductToCart</td> 
+  <td>main@1056439044</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>19/11/04 15:39:05</td>   <td>-30602</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.CheckOutTestCase@46df794e]">&gt;&gt;Startdriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1056439044</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>19/11/04 15:39:53</td>   <td>17467</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.CheckOutTestCase@46df794e]">&lt;&lt;StopDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1056439044</td>   <td></td> </tr>
+<tr bgcolor="756ead">  <td>19/11/04 15:39:44</td>   <td>8557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckOutTestCase.UserCanGoToCheckoutSuccessfully()[pri:4, instance:tests.CheckOutTestCase@46df794e]">UserCanGoToCheckoutSuccessfully</td> 
+  <td>main@1056439044</td>   <td></td> </tr>
+<tr bgcolor="756ead">  <td>19/11/04 15:39:21</td>   <td>-14305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckOutTestCase.UserCanReguisterSuccessfully()[pri:1, instance:tests.CheckOutTestCase@46df794e]">UserCanReguisterSuccessfully</td> 
+  <td>main@1056439044</td>   <td></td> </tr>
+<tr bgcolor="756ead">  <td>19/11/04 15:39:29</td>   <td>-6169</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckOutTestCase.UserCanSearchForProductSuccessfully()[pri:2, instance:tests.CheckOutTestCase@46df794e]">UserCanSearchForProductSuccessfully</td> 
+  <td>main@1056439044</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>19/11/04 15:39:48</td>   <td>12449</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.CheckOutTestCase@46df794e]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1056439044</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>19/11/04 15:39:29</td>   <td>-6171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.CheckOutTestCase@46df794e]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1056439044</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>19/11/04 15:39:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.CheckOutTestCase@46df794e]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1056439044</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>19/11/04 15:39:44</td>   <td>8557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.CheckOutTestCase@46df794e]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1056439044</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>19/11/04 15:39:48</td>   <td>12448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.CheckOutTestCase@46df794e]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1056439044</td>   <td></td> </tr>
 </table>
