--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Regression_Suite">
-                    <span>C:\Users\sameh\workspace\taf\Regression.xml</span>
+                    <span>C:\Users\Timo\eclipse-workspace\taf\Regression.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -145,21 +145,6 @@
           <div class="suite-Regression_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.UserSearchForProductAutoTestCase</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="UserCanSearchForProductAutoCompleteSuccessfully">
-                  </a> <!-- UserCanSearchForProductAutoCompleteSuccessfully -->
-                  <span class="method-name">UserCanSearchForProductAutoCompleteSuccessfully</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Regression_Suite-class-passed -->
-          <div class="suite-Regression_Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
               <span class="class-name">tests.UserSearchForProductTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -175,14 +160,14 @@
           <div class="suite-Regression_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.UserRegisterWithJavaFakerTestCase</span>
+              <span class="class-name">tests.ContactUsTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="UserCanReguisterSuccessfully">
-                  </a> <!-- UserCanReguisterSuccessfully -->
-                  <span class="method-name">UserCanReguisterSuccessfully</span>
+                  <a name="UserCanContactUs">
+                  </a> <!-- UserCanContactUs -->
+                  <span class="method-name">UserCanContactUs</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -212,14 +197,29 @@
           <div class="suite-Regression_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.ContactUsTestCase</span>
+              <span class="class-name">tests.UserSearchForProductAutoTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="UserCanContactUs">
-                  </a> <!-- UserCanContactUs -->
-                  <span class="method-name">UserCanContactUs</span>
+                  <a name="UserCanSearchForProductAutoCompleteSuccessfully">
+                  </a> <!-- UserCanSearchForProductAutoCompleteSuccessfully -->
+                  <span class="method-name">UserCanSearchForProductAutoCompleteSuccessfully</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Regression_Suite-class-passed -->
+          <div class="suite-Regression_Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">tests.UserRegisterWithJavaFakerTestCase</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="UserCanReguisterSuccessfully">
+                  </a> <!-- UserCanReguisterSuccessfully -->
+                  <span class="method-name">UserCanReguisterSuccessfully</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -227,14 +227,14 @@
         </div> <!-- panel Regression_Suite -->
         <div panel-name="test-xml-Regression_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sameh\workspace\taf\Regression.xml</span>
+            <span class="header-content">C:\Users\Timo\eclipse-workspace\taf\Regression.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Regression Suite&quot;&gt;
-  &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
+  &lt;parameter name=&quot;browser&quot; value=&quot;chrome-headless&quot;/&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Regression Test&quot; preserve-order=&quot;false&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;tests.UserRegisterWithJavaFakerTestCase&quot;/&gt;
@@ -285,27 +285,27 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'UserCanReguisterSuccessfully')
 data.setCell(0, 2, 'tests.UserRegisterWithJavaFakerTestCase')
-data.setCell(0, 3, 6925);
+data.setCell(0, 3, 5905);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'UserCanSearchForProductAutoCompleteSuccessfully')
-data.setCell(1, 2, 'tests.UserSearchForProductAutoTestCase')
-data.setCell(1, 3, 4006);
+data.setCell(1, 1, 'UserCanContactUs')
+data.setCell(1, 2, 'tests.ContactUsTestCase')
+data.setCell(1, 3, 4285);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'UserCanContactUs')
-data.setCell(2, 2, 'tests.ContactUsTestCase')
-data.setCell(2, 3, 3772);
+data.setCell(2, 1, 'UserCanSearchForProductAutoCompleteSuccessfully')
+data.setCell(2, 2, 'tests.UserSearchForProductAutoTestCase')
+data.setCell(2, 3, 3596);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'UserCanSearchForProductSuccessfully')
-data.setCell(3, 2, 'tests.UserSearchForProductTestCase')
-data.setCell(3, 3, 2614);
+data.setCell(3, 2, 'tests.UserCanChangeCurrencyTestCase')
+data.setCell(3, 3, 2966);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'UserCanSearchForProductSuccessfully')
+data.setCell(4, 1, 'UserChangeCurrency')
 data.setCell(4, 2, 'tests.UserCanChangeCurrencyTestCase')
-data.setCell(4, 3, 1854);
+data.setCell(4, 3, 2115);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'UserChangeCurrency')
-data.setCell(5, 2, 'tests.UserCanChangeCurrencyTestCase')
-data.setCell(5, 3, 1478);
+data.setCell(5, 1, 'UserCanSearchForProductSuccessfully')
+data.setCell(5, 2, 'tests.UserSearchForProductTestCase')
+data.setCell(5, 3, 1994);
 window.suiteTableData['Regression_Suite']= { tableData: data, tableDiv: 'times-div-Regression_Suite'}
 return data;
 }
@@ -329,7 +329,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">tests.UserSearchForProductAutoTestCase</span>
+              <span class="ignored-class-name">tests.UserSearchForProductTestCase</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">StopDriver</span>
                 <br/>
@@ -338,7 +338,7 @@ return data;
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
             <div class="ignored-class-div">
-              <span class="ignored-class-name">tests.UserSearchForProductTestCase</span>
+              <span class="ignored-class-name">tests.ContactUsTestCase</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">StopDriver</span>
                 <br/>
@@ -356,7 +356,7 @@ return data;
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
             <div class="ignored-class-div">
-              <span class="ignored-class-name">tests.ContactUsTestCase</span>
+              <span class="ignored-class-name">tests.UserSearchForProductAutoTestCase</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">StopDriver</span>
                 <br/>
@@ -374,7 +374,7 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">tests.UserRegisterWithJavaFakerTestCase</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
-                <span class="method-name">Startdriver(chrome)</span>
+                <span class="method-name">Startdriver(chrome-headless)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
             </div> <!-- chronological-class -->
@@ -382,90 +382,90 @@ return data;
               <div class="chronological-class-name">tests.ContactUsTestCase</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">UserCanContactUs</span>
-                <span class="method-start">17571 ms</span>
+                <span class="method-start">16399 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">failtestcase([TestResult name=UserCanContactUs status=SUCCESS method=ContactUsTestCase.UserCanContactUs()[pri:0, ...)</span>
-                <span class="method-start">21345 ms</span>
+                <span class="method-start">20687 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">WaitAfterClass</span>
-                <span class="method-start">21346 ms</span>
+                <span class="method-start">20689 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">tests.UserRegisterWithJavaFakerTestCase</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">UserCanReguisterSuccessfully</span>
-                <span class="method-start">24347 ms</span>
+                <span class="method-start">23689 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">failtestcase([TestResult name=UserCanReguisterSuccessfully status=SUCCESS method=UserRegisterWithJavaFakerTestCas...)</span>
-                <span class="method-start">31275 ms</span>
+                <span class="method-start">29596 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">WaitAfterClass</span>
-                <span class="method-start">31275 ms</span>
+                <span class="method-start">29597 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">tests.UserSearchForProductAutoTestCase</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">UserCanSearchForProductAutoCompleteSuccessfully</span>
-                <span class="method-start">34277 ms</span>
+                <span class="method-start">32598 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">failtestcase([TestResult name=UserCanSearchForProductAutoCompleteSuccessfully status=SUCCESS method=UserSearchFor...)</span>
-                <span class="method-start">38285 ms</span>
+                <span class="method-start">36197 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">WaitAfterClass</span>
-                <span class="method-start">38285 ms</span>
+                <span class="method-start">36197 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">tests.UserSearchForProductTestCase</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">UserCanSearchForProductSuccessfully</span>
-                <span class="method-start">41285 ms</span>
+                <span class="method-start">39199 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">failtestcase([TestResult name=UserCanSearchForProductSuccessfully status=SUCCESS method=UserSearchForProductTestC...)</span>
-                <span class="method-start">43901 ms</span>
+                <span class="method-start">41194 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">WaitAfterClass</span>
-                <span class="method-start">43901 ms</span>
+                <span class="method-start">41194 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">tests.UserCanChangeCurrencyTestCase</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">UserCanSearchForProductSuccessfully</span>
-                <span class="method-start">46902 ms</span>
+                <span class="method-start">44198 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">failtestcase([TestResult name=UserCanSearchForProductSuccessfully status=SUCCESS method=UserCanChangeCurrencyTest...)</span>
-                <span class="method-start">48757 ms</span>
+                <span class="method-start">47165 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">UserChangeCurrency</span>
-                <span class="method-start">48758 ms</span>
+                <span class="method-start">47166 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">failtestcase([TestResult name=UserChangeCurrency status=SUCCESS method=UserCanChangeCurrencyTestCase.UserChangeCu...)</span>
-                <span class="method-start">50238 ms</span>
+                <span class="method-start">49282 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">WaitAfterClass</span>
-                <span class="method-start">50238 ms</span>
+                <span class="method-start">49283 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">tests.UserRegisterWithJavaFakerTestCase</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">StopDriver</span>
-                <span class="method-start">53322 ms</span>
+                <span class="method-start">52365 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
